src/libbulletc/src/btSoftBody_wrap.h


	EXPORT btSoftBodyWorldInfo* btSoftBodyWorldInfo_new();

	EXPORT btScalar btSoftBodyWorldInfo_getAir_density(btSoftBodyWorldInfo* obj);

	EXPORT btBroadphaseInterface* btSoftBodyWorldInfo_getBroadphase(btSoftBodyWorldInfo* obj);

	EXPORT btDispatcher* btSoftBodyWorldInfo_getDispatcher(btSoftBodyWorldInfo* obj);

	EXPORT void btSoftBodyWorldInfo_getGravity(btSoftBodyWorldInfo* obj, btScalar* value);

	EXPORT void btSoftBodyWorldInfo_getSparsesdf(btSoftBodyWorldInfo* obj);

	EXPORT btScalar btSoftBodyWorldInfo_getWater_density(btSoftBodyWorldInfo* obj);

	EXPORT void btSoftBodyWorldInfo_getWater_normal(btSoftBodyWorldInfo* obj, btScalar* value);

	EXPORT btScalar btSoftBodyWorldInfo_getWater_offset(btSoftBodyWorldInfo* obj);

	EXPORT void btSoftBodyWorldInfo_setAir_density(btSoftBodyWorldInfo* obj, btScalar value);

	EXPORT void btSoftBodyWorldInfo_setBroadphase(btSoftBodyWorldInfo* obj, btBroadphaseInterface* value);

	EXPORT void btSoftBodyWorldInfo_setDispatcher(btSoftBodyWorldInfo* obj, btDispatcher* value);

	EXPORT void btSoftBodyWorldInfo_setGravity(btSoftBodyWorldInfo* obj, btScalar* value);

	//EXPORT void btSoftBodyWorldInfo_setSparsesdf(btSoftBodyWorldInfo* obj, void value);
	EXPORT void btSoftBodyWorldInfo_setWater_density(btSoftBodyWorldInfo* obj, btScalar value);

	EXPORT void btSoftBodyWorldInfo_setWater_normal(btSoftBodyWorldInfo* obj, btScalar* value);

	EXPORT void btSoftBodyWorldInfo_setWater_offset(btSoftBodyWorldInfo* obj, btScalar value);

	EXPORT void btSoftBodyWorldInfo_delete(btSoftBodyWorldInfo* obj);


	EXPORT btSoftBody_sRayCast* btSoftBody_sRayCast_new();

	EXPORT btSoftBody* btSoftBody_sRayCast_getBody(btSoftBody_sRayCast* obj);

	EXPORT void btSoftBody_sRayCast_getFeature(btSoftBody_sRayCast* obj);

	EXPORT btScalar btSoftBody_sRayCast_getFraction(btSoftBody_sRayCast* obj);

	EXPORT int btSoftBody_sRayCast_getIndex(btSoftBody_sRayCast* obj);

	EXPORT void btSoftBody_sRayCast_setBody(btSoftBody_sRayCast* obj, btSoftBody* value);

	//EXPORT void btSoftBody_sRayCast_setFeature(btSoftBody_sRayCast* obj, void value);
	EXPORT void btSoftBody_sRayCast_setFraction(btSoftBody_sRayCast* obj, btScalar value);

	EXPORT void btSoftBody_sRayCast_setIndex(btSoftBody_sRayCast* obj, int value);

	EXPORT void btSoftBody_sRayCast_delete(btSoftBody_sRayCast* obj);


	EXPORT btScalar btSoftBody_ImplicitFn_Eval(btSoftBody_ImplicitFn* obj, btScalar* x);

	EXPORT void btSoftBody_ImplicitFn_delete(btSoftBody_ImplicitFn* obj);


	EXPORT btSoftBody_sCti* btSoftBody_sCti_new();

	EXPORT btCollisionObject* btSoftBody_sCti_getColObj(btSoftBody_sCti* obj);

	EXPORT void btSoftBody_sCti_getNormal(btSoftBody_sCti* obj);

	EXPORT btScalar btSoftBody_sCti_getOffset(btSoftBody_sCti* obj);

	EXPORT void btSoftBody_sCti_setColObj(btSoftBody_sCti* obj, btCollisionObject* value);

	//EXPORT void btSoftBody_sCti_setNormal(btSoftBody_sCti* obj, void value);
	EXPORT void btSoftBody_sCti_setOffset(btSoftBody_sCti* obj, btScalar value);

	EXPORT void btSoftBody_sCti_delete(btSoftBody_sCti* obj);