src/BulletSharpPInvoke/SoftBody/SoftBody.cs

using SiliconStudio.Core.Mathematics;
using System;
using System.Runtime.InteropServices;
using System.Security;

namespace BulletSharp.SoftBody
{
	public class SoftBodyWorldInfo
	{
		internal IntPtr _native;

		internal SoftBodyWorldInfo(IntPtr native)
		{
			_native = native;
		}

		public SoftBodyWorldInfo()
		{
			_native = btSoftBodyWorldInfo_new();
		}

		public float Air_density
		{
			get { return btSoftBodyWorldInfo_getAir_density(_native); }
			set { btSoftBodyWorldInfo_setAir_density(_native, value); }
		}

		public BroadphaseInterface Broadphase
		{
            get { return new BroadphaseInterface(btSoftBodyWorldInfo_getBroadphase(_native)); }
			set { btSoftBodyWorldInfo_setBroadphase(_native, value._native); }
		}

		public Dispatcher Dispatcher
		{
            get { return new Dispatcher(btSoftBodyWorldInfo_getDispatcher(_native)); }
			set { btSoftBodyWorldInfo_setDispatcher(_native, value._native); }
		}

		public Vector3 Gravity
		{
            get
            {
                Vector3 value;
                btSoftBodyWorldInfo_getGravity(_native, out value);
                return value;
            }
			set { btSoftBodyWorldInfo_setGravity(_native, ref value); }
		}
        /*
		public void Sparsesdf
		{
			get { return btSoftBodyWorldInfo_getSparsesdf(_native); }
			set { btSoftBodyWorldInfo_setSparsesdf(_native, value._native); }
		}
        */
		public float WaterDensity
		{
			get { return btSoftBodyWorldInfo_getWater_density(_native); }
			set { btSoftBodyWorldInfo_setWater_density(_native, value); }
		}

		public Vector3 WaterNormal
		{
            get
            {
                Vector3 value;
                btSoftBodyWorldInfo_getWater_normal(_native, out value);
                return value;
            }
			set { btSoftBodyWorldInfo_setWater_normal(_native, ref value); }
		}

		public float WaterOffset
		{
			get { return btSoftBodyWorldInfo_getWater_offset(_native); }
			set { btSoftBodyWorldInfo_setWater_offset(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBodyWorldInfo_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~SoftBodyWorldInfo()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBodyWorldInfo_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBodyWorldInfo_getAir_density(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBodyWorldInfo_getBroadphase(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBodyWorldInfo_getDispatcher(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_getGravity(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_getSparsesdf(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBodyWorldInfo_getWater_density(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_getWater_normal(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBodyWorldInfo_getWater_offset(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_setAir_density(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_setBroadphase(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_setDispatcher(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_setGravity(IntPtr obj, [In] ref Vector3 value);
		//[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		//static extern void btSoftBodyWorldInfo_setSparsesdf(IntPtr obj, SparseSdf value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_setWater_density(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_setWater_normal(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_setWater_offset(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBodyWorldInfo_delete(IntPtr obj);
	}

    public enum AeroModel
    {
        VPoint,
        VTwoSided,
        VTwoSidedLiftDrag,
        VOneSided,
        FTwoSided,
        FTwoSidedLiftDrag,
        FOneSided
    }

    public enum VSolver
    {
        Linear
    }

    public enum PSolver
    {
        Linear,
        Anchors,
        RContacts,
        SContacts
    }

    public enum SolverPresets
    {
        Positions,
        Velocities,
        Default = Positions
    }

    public enum EFeature
    {
        None,
        Node,
        Link,
        Face,
        Tetra
    }

    [Flags]
    public enum Collision
    {
        None = 0x00,
        RvsMask = 0x0f,
        SdfRS = 0x01,
        CLRS = 0x02,
        SvsMask = 0x30,
        VFSS = 0x10,
        CLSS = 0x20,
        CLSelf = 0x40,
        Default = SdfRS
    }

    [Flags]
    public enum FMaterial
    {
        None = 0x00,
        DebugDraw = 0x01,
        Default = DebugDraw
    }

	public class SRayCast
	{
		internal IntPtr _native;

		internal SRayCast(IntPtr native)
		{
			_native = native;
		}

		public SRayCast()
		{
			_native = btSoftBody_sRayCast_new();
		}

		public SoftBody Body
		{
			get { return SoftBody.GetManaged(btSoftBody_sRayCast_getBody(_native)) as SoftBody; }
			set { btSoftBody_sRayCast_setBody(_native, value._native); }
		}
        /*
		public void Feature
		{
			get { return btSoftBody_sRayCast_getFeature(_native); }
			set { btSoftBody_sRayCast_setFeature(_native, value._native); }
		}
        */
		public float Fraction
		{
			get { return btSoftBody_sRayCast_getFraction(_native); }
			set { btSoftBody_sRayCast_setFraction(_native, value); }
		}

		public int Index
		{
			get { return btSoftBody_sRayCast_getIndex(_native); }
			set { btSoftBody_sRayCast_setIndex(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_sRayCast_delete(_native);
				_native = IntPtr.Zero;
			}
		}

        ~SRayCast()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_sRayCast_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_sRayCast_getBody(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sRayCast_getFeature(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_sRayCast_getFraction(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btSoftBody_sRayCast_getIndex(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sRayCast_setBody(IntPtr obj, IntPtr value);
		//[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		//static extern void btSoftBody_sRayCast_setFeature(IntPtr obj, _ value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sRayCast_setFraction(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sRayCast_setIndex(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sRayCast_delete(IntPtr obj);
	}

	public class ImplicitFn
	{
		internal IntPtr _native;

		internal ImplicitFn(IntPtr native)
		{
			_native = native;
		}

		public float Eval(Vector3 x)
		{
			return btSoftBody_ImplicitFn_Eval(_native, ref x);
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_ImplicitFn_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~ImplicitFn()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_ImplicitFn_Eval(IntPtr obj, [In] ref Vector3 x);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_ImplicitFn_delete(IntPtr obj);
	}

	public class sCti
	{
		internal IntPtr _native;

		internal sCti(IntPtr native)
		{
			_native = native;
		}

		public sCti()
		{
			_native = btSoftBody_sCti_new();
		}

		public CollisionObject ColObj
		{
            get { return CollisionObject.GetManaged(btSoftBody_sCti_getColObj(_native)); }
			set { btSoftBody_sCti_setColObj(_native, value._native); }
		}
        /*
		public void Normal
		{
			get { return btSoftBody_sCti_getNormal(_native); }
			set { btSoftBody_sCti_setNormal(_native, value._native); }
		}
        */
		public float Offset
		{
			get { return btSoftBody_sCti_getOffset(_native); }
			set { btSoftBody_sCti_setOffset(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_sCti_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~sCti()
		{
			Dispose(false);
		}
